[metadata]
name = fpdb
author = Qiuyu Fu, Jincai Yang
summary = fetch pdb info
home-page = https://gitlab.com/hnlab/fpdb.git
license = MIT
version = 1.0.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
keywords =
    setup
    distutils
[files]
packages =
    fpdb
